Revert "move stack name to window title on card details"
This reverts commit 1437276aa819670f5100bb87ade3ccd2cd9fd400.

--- a/src/app/components/cards/card-details/card-details.component.html
+++ b/src/app/components/cards/card-details/card-details.component.html
@@ -55,7 +55,18 @@
               }
             </div>
           </ng-container>
-          <div class="card--content_stack-title"></div>
+          <div class="card--content_stack-title">
+            <ng-container
+              *ngIf="cardDetailsStore.currentStack$ | async as currentStack"
+            >
+              <p
+                class="text-lg font-semibold font-mono"
+                data-testid="stack-title"
+              >
+                {{ currentStack.name }}
+              </p>
+            </ng-container>
+          </div>
 
           <div class="card--content_card-title">
             <p class="text-xl font-bold font-mono" data-testid="card-title">
