--- a/src/app/layout/editor/editor.component.html
+++ b/src/app/layout/editor/editor.component.html
@@ -30,7 +30,11 @@
     </span>
     <span class="ql-formats">
       <button class="ql-image" value="super"></button>
-      <button [matMenuTriggerFor]="menu" (click)="saveCarrotPosition()">
+      <button
+        style="dispay: flex; align-items: center; justify-content: center"
+        [matMenuTriggerFor]="menu"
+        (click)="saveCarrotPosition()"
+      >
         <mat-icon
           aria-hidden="false"
           aria-label="Example home icon"
@@ -42,7 +46,6 @@
 
   <mat-menu #menu="matMenu">
     <div class="menu-item-container">
-      <!-- do not close menu when menu is clicked-->
       <form (click)="stopPropagation($event)">
         <mat-form-field class="example-form-field">
           <mat-label>Suche</mat-label>
@@ -54,13 +57,12 @@
           />
         </mat-form-field>
       </form>
-      <!--        TODO i need to find a way of linking docs-->
-      <!--      <ng-container *ngFor="let opt of cardTitleMapping | filter: searchText">-->
-      <!--        <button mat-menu-item (click)="onLink(opt.id, opt.title)">-->
-      <!--          {{ opt.title }}-->
-      <!--        </button>-->
-      <!--      </ng-container>-->
+      <ng-container *ngFor="let card of foundCards() | filterEmptyTitle">
+        <button mat-menu-item (click)="onLink(card.id!, card.title)">
+          {{ card.title }}
+        </button></ng-container
+      >
     </div>
   </mat-menu>
-  <div id="editor-container"></div>
+  <div id="editor-container" #editorContainer></div>
 </div>
