--- a/src/app/layout/editor/editor.component.html
+++ b/src/app/layout/editor/editor.component.html
@@ -37,7 +37,7 @@
       >
         <mat-icon
           aria-hidden="false"
-          aria-label="Example home icon"
+          aria-label="link icon"
           fontIcon="link"
         ></mat-icon>
       </button>
