add option to edit cards directly in card-details view when no marker is available.

--- a/src/app/components/cards/card-details/card-details.component.html
+++ b/src/app/components/cards/card-details/card-details.component.html
@@ -59,7 +59,7 @@
                   aria-label="Example icon button with a home icon"
                 >
                   <mat-icon data-testid="location-icon">
-                    {{ isLocationCard(card) ? "pin_drop" : "location_off" }}
+                    {{ isLocationCard(card) ? "pin_drop" : "edit" }}
                   </mat-icon>
                 </button>
               }
